Fixing alignment issues

--- a/docs/cmaj_doc_style.css
+++ b/docs/cmaj_doc_style.css
@@ -7,6 +7,7 @@
     background-color: white;
     font-family: var(--serif-font);
     max-height: 100%;
+    position: static;
     display: flex;
     flex-direction: row;
     margin: 0;
